--- a/11 - COFLA/styles.css
+++ b/11 - COFLA/styles.css
@@ -4,29 +4,31 @@ body{
     font-family: 'Poppins',sans-serif;
     margin: 0;
     padding: 0;
+    text-align: center;
     
     
-}
-
-.flex-container{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 50vh
 }
 
 .grid-container{
     display: grid;
-    grid-template-rows: 50px;
+    
     grid-template-columns: repeat(4,minmax(min-content,max-content));
     grid-auto-rows: 50px;
-    gap:10px
+    gap:5px;
+    
+    
    
 
 }
 
 .grid-container .grid-item{
-    padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
     border: 4px solid #3b686b;
+    padding:4px
+    
+    
    
 }
