--- a/18 - COFLA/styles.css
+++ b/18 - COFLA/styles.css
@@ -19,6 +19,7 @@ body{
     border: 10px solid #666;
     background: #5c7796;
     padding: 2px;
+    margin: 10px;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
@@ -32,11 +33,11 @@ body{
 .materia .nota{
     background: rgba(143, 48, 48, 0.63);
     height: 20px;
-    border-radius:50%;
-    -webkit-border-radius:50%;
-    -moz-border-radius:50%;
-    -ms-border-radius:50%;
-    -o-border-radius:50%;
+    border-radius:3px;
+    -webkit-border-radius:3px;
+    -moz-border-radius:3px;
+    -ms-border-radius:3px;
+    -o-border-radius:3px;
 }
 
 
